--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-379.1KB/s(Youtube:不良林), server: 38.64.138.145, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇳🇱 荷兰-547.9KB/s(Youtube:不良林), server: 185.246.155.23, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇺🇸 美国-763.2KB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-268.6KB/s(Youtube:不良林), server: 38.64.138.145, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.17MB/s(Youtube:不良林), server: 85.208.108.18, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-740.6KB/s(Youtube:不良林), server: 149.202.82.172, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇫🇷 法国-255.7KB/s(Youtube:不良林), server: 145.239.1.100, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇫🇷 法国-356.7KB/s(Youtube:不良林), server: 149.202.82.172, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇫🇷 法国-259.5KB/s(Youtube:不良林), server: 145.239.1.100, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇫🇷 法国-601.6KB/s(Youtube:不良林), server: 149.202.82.172, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-268.0KB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-466.3KB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-702.9KB/s(Youtube:不良林), server: 38.114.114.67, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-682.1KB/s(Youtube:不良林), server: 167.88.62.68, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-286.6KB/s(Youtube:不良林), server: 167.88.63.79, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-411.5KB/s(Youtube:不良林), server: 167.88.62.68, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-704.7KB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-763.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-740.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-255.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-763.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-740.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-255.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-763.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-740.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-255.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-763.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-740.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-255.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-763.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-740.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-255.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-763.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-740.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-255.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-763.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-740.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-255.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
