--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇫🇷 法国-259.5KB/s(Youtube:不良林), server: 145.239.1.100, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-268.0KB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-322.1KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-466.3KB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-702.9KB/s(Youtube:不良林), server: 38.114.114.67, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 波兰-613.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇫🇷 法国-207.6KB/s(Youtube:不良林), server: 145.239.1.100, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-772.8KB/s(Youtube:不良林), server: 167.88.61.175, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-682.1KB/s(Youtube:不良林), server: 167.88.62.68, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-286.6KB/s(Youtube:不良林), server: 167.88.63.79, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-411.5KB/s(Youtube:不良林), server: 167.88.62.68, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 波兰-613.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 波兰-613.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 波兰-613.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 波兰-613.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 波兰-613.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 波兰-613.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-259.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-702.9KB/s(Youtube:不良林)
+      - 波兰-613.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
