--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-322.1KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-466.3KB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 波兰-613.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇫🇷 法国-207.6KB/s(Youtube:不良林), server: 145.239.1.100, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-772.8KB/s(Youtube:不良林), server: 167.88.61.175, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-682.1KB/s(Youtube:不良林), server: 167.88.62.68, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-889.4KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-286.6KB/s(Youtube:不良林), server: 167.88.63.79, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-411.5KB/s(Youtube:不良林), server: 167.88.62.68, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-704.7KB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-234.9KB/s(Youtube:不良林), server: 38.68.134.191, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-892.0KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 38.68.135.19, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-340.5KB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-710.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-363.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-347.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-358.8KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 波兰-613.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 波兰-613.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 波兰-613.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 波兰-613.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 波兰-613.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 波兰-613.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-322.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.3KB/s(Youtube:不良林)
-      - 波兰-613.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-207.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-411.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-704.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
