--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇬🇧 英国-495.4KB/s(Youtube:不良林), server: 12ukclu.pronetworklink.net, port: 443, type: trojan, password: 93a30832-7f00-408b-9374-8159690b88ad, sni: 12ukclu.pronetworklink.net, skip-cert-verify: true}
   - {name: 🇺🇸 美国-889.4KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-286.6KB/s(Youtube:不良林), server: 167.88.63.79, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-234.9KB/s(Youtube:不良林), server: 38.68.134.191, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-892.0KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 38.68.135.19, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-340.5KB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-710.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-363.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-347.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-358.8KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-234.9KB/s(Youtube:不良林), server: 38.68.134.191, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-607.7KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.17MB/s(Youtube:不良林), server: 8.214.33.158, port: 80, type: vmess, uuid: cb81e6ab-1d83-4ac1-f0ad-ae5c2a7c29ef, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 8.214.33.158}}
+  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 38.68.134.191, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-764.3KB/s(Youtube:不良林), server: 38.68.134.191, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-816.9KB/s(Youtube:不良林), server: 38.68.134.191, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-423.3KB/s(Youtube:不良林), server: 38.68.134.191, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇬🇧 英国-495.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-607.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-816.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇬🇧 英国-495.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-607.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-816.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇬🇧 英国-495.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-607.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-816.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇬🇧 英国-495.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-607.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-816.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇬🇧 英国-495.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-607.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-816.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇬🇧 英国-495.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-607.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-816.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇬🇧 英国-495.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-889.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-286.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-892.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-347.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-607.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-816.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
